Correction PC, textes overflow - desc ko

--- a/public/sass/responsive/_media.scss
+++ b/public/sass/responsive/_media.scss
@@ -18,82 +18,40 @@ footer{
 
 // PC 
 @media all and (min-width: 1024px){
-main{
-    background: url("specialBG.jpg");
-    background-size: 150%;
-    background-repeat: no-repeat;
-    background-position: left center;
-}
-
 .accueil{
     display: flex;
-    max-width: 100%;
-    flex-direction: row-reverse;
     .intro{
-        width: 50%;
-        padding: 0;
-    }
-    .fonction{
-        width: 30%;
-        margin: 4rem;
-        padding: 0;
+        padding: 2rem 2rem 3rem 2rem!important;
+        text-align: start;
+        h2{
+            padding: 0;
+        }
     }
 }
 
-.intro{
-    background-color: inherit!important;
-    margin: 4rem!important;
-    p{
-        font-size: 1.2rem;
-        margin: 6.3rem 0!important;
+.fonction{
+    flex-grow: 1;
+    .fonction-list{
+        @include flexCenterX;
+        .fonction-item{
+            margin: 0 1rem;
+        }
+        .fonction-txt{
+            padding-left: 1rem!important;
+            font-weight: normal; 
+        }
     }
-}
-
-.btn-cta{
-    font-size: 1.2rem!important;
-}
-
-.container > h2,
-.intro > h2,
-.list-restaurant > h2{
-    font-size: 1.5rem!important;
-    padding: .5rem 0!important;
-    color: #fff;
-    background: linear-gradient(45deg, $color-tertiary, #6b6b83, #3b8d99, #D16BA5);    
-    background-size: 400%;
-    animation: bg-gradient 12s ease infinite;
-    border-radius: 50rem 120rem;
-}
-
-.fonction-txt{
-    font-weight: normal!important;
-}
-
-@keyframes bg-gradient{
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-.fonction-txt{
-    font-size: 1.2rem;
 }
 
 .list-restaurant{
     background-color: inherit!important;
+    padding: 2rem 1rem!important;
     h2{
-        text-align: center;
-        font-size: 2rem;
+        margin-left: 1rem;
     }
     &__Card{
         display: flex;
         justify-content: space-around;
-        padding-top: 2rem;
     }
 }
 .restauContainer{
@@ -101,7 +59,15 @@ main{
 }
 
 footer{
-    align-items: center;
+    flex-direction: row!important;
+    justify-content: space-around!important;
+    height: 16vh;
+    .logo{
+        padding-bottom: 0!important;
+    }
+    .iconFootContainer{
+        display: block!important;
+    }
 }
 
 //*page restaurant
@@ -119,9 +85,6 @@ footer{
         h2{
             font-size: 2rem;
         }
-        .favIcon::before{
-            opacity: 1;
-        }
     }
     .menus{
         display: flex;
@@ -133,10 +96,5 @@ footer{
 .cta{
 	margin-top: 2.5rem;
 }
-
-.item-txt{
-    width: 85%!important;
-}
-
 
 } // fermeture paramètres PC 
