--- a/public/sass/utils/_mixins.scss
+++ b/public/sass/utils/_mixins.scss
@@ -85,19 +85,16 @@
 	box-shadow: 0rem 0.2rem 0.5rem lightgrey;
 	background-color: #fff;
 	display: flex;
-	justify-content: space-between;
+	// justify-content: space-between;
 	padding: .7rem;
 	margin: .5rem;
     overflow: hidden;
 }
 
 @mixin itemName{
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         font-weight: bold;
         line-height: 1.5;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
 }
 
 @mixin bold{
@@ -111,4 +108,10 @@
 @mixin animationCard{
     //Je fais apparaitre les cartes de manière smooth
     animation: fadein-bottom 1.5s ease-in-out both;
+}
+
+@mixin spaceOverFlow {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
